# imperfect

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/workflows/: ci.yml  publish.yml
benches/: imperfect.rs
docs/: benchmarks.md  context.md  flight-recorder.md  loss-types.md  macro.md  migration.md  pipeline.md  terni-functor.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
