[package]
name = "terni"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
description = "Ternary error handling: Success, Partial with measured loss, Failure. Because computation is not binary."
repository = "https://github.com/systemic-engineering/prism"
keywords = ["error-handling", "partial", "ternary", "pbta", "eh"]
categories = ["rust-patterns", "no-std"]
readme = "README.md"

[features]
default = ["macros"]
macros = ["dep:terni-macros"]

[dependencies]
terni-macros = { path = "macros", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "imperfect"
harness = false
